--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="header">
                 <p class="path"><span onclick="renderAnimals()">all-animals</span> / <span>hunde</span></p>
 				<div class="buttons">
-					<button class="">save changes</button>
+					<button class="" onclick="updateServer()">save changes</button>
 					<button class="outlined" id="add-animal" onclick="addAnimal()">add-animal</button>
 				</div>
 			</div>
