--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./style.css">
 
 	<script src='js/script.js' defer></script>
+	<script src='js/datepicker.js'></script>
     <script src="js/popupEngine.js"></script>
 	<script src="https://kit.fontawesome.com/7796cb6c97.js" crossorigin="anonymous"></script>
 
@@ -31,6 +32,12 @@
 				<button onclick="selectAside('typeID', this)">types</button>
 				<button onclick="selectAside('ownerID', this)">owners</button>
 			</div>
+
+			<button onclick="openDatePicker()">Open Date Picker</button>
+			<div id="datepicker" style="display: none;">
+				<div id="calendar"></div>
+			</div>
+
 
 			<hr>
 
