--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     ?>
 <body>
 	<nav>
-		<h1>Tierheim Hintertupfing</h1>
+		<div class="left">
+			<img src="./img/logo.png" alt="logo">
+		</div>
+		<h1></h1>
 	</nav>
 	<main>
 		<aside>
