--- a/login/index.html
+++ b/login/index.html
@@ -34,7 +34,7 @@
                 </div>
             </section>
             <section class="signup">
-                <h2>Sign in</h2>
+                <h2>Create Shelter</h2>
                 <input type="text" placeholder="shelter name">
                 <input type="text" placeholder="shelter email">
                 <br>
