--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 <body>
 	<nav>
 		<div class="left">
-			<img src="./img/logo.png" alt="logo">
+			<div class="logo">
+				<img src="./img/logo.png" alt="logo">
+			</div>
+			<h1>PetPal</h1>
 		</div>
-		<h1></h1>
+		<div class="right">
+			<h1 class="sheltername"></h1>
+		</div>
+
 	</nav>
 	<main>
 		<aside>
@@ -41,7 +47,7 @@
 			<section class="content"></section>
 
 			<div class="buttons bottom">
-				<button class="editButton">edit shelter<i class="fa-solid fa-pen-to-square"></i></button>
+				<button onclick="toggleAdminMode()" class="editButton" data-mode="join">edit shelter<i class="fa-solid fa-pen-to-square"></i></button>
 				<button onclick="logOut()" class="saveButton">log out<i class="fa-solid fa-arrow-right-from-bracket"></i></button>
 			</div>
 		</aside>
