--- a/login/index.html
+++ b/login/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>PetPal Login</title>
 
     <link rel="stylesheet" href="../style.css">
     <script src="../js/login.js" defer></script>
@@ -18,8 +18,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <h1>Logo</h1>
+    <nav class="login-nav">
+        <div class="left">
+            <div class="logo">
+                <img src="../img/logo.png" alt="logo">
+            </div>
+            <h1>PetPal</h1>
+        </div>
     </nav>
     <main class="login">
         <div id="login-container">
